...
    <!-- app strings-->
    <string name="app_name">My Digital Medical Journal</string>
    <string name="app_name_short">M. Journal</string>
    <string name="nav_header_subtitle">\@MyDigitalMedicalJournal</string>
    <string name="nav_header_desc">My Digital Medical Journal Logo</string>
    <!--words-->
    <string name="category">Category</string>
    <string name="template">Template</string>
    <!-- fragment/navigation name strings-->
    <string name="drawer_templates">Templates</string>
    <string name="drawer_categories">Categories</string>
    <string name="drawer_category_manage">Manage</string>
    <string name="drawer_calendar">Calendar</string>
    <string name="drawer_reports">Reports</string>
...
    <string name="settings_length">Length</string>
    <string name="settings_time">Time Format</string>
    <string name="settings_date">Date Format</string>
    <string name="settings_duration">Duration</string>
    <string name="settings_measures">Measures</string>
    <!-- clickables strings-->
    <string name="rename">Rename</string>
    <string name="manage">Manage</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="add_field">Add field</string>
    <string name="clear_button">Clear</string>
    <string name="add_label">Add Optional Label</string>
    <string name="add_radio">Add Radio Button</string>
    <string name="add_check">Add Checkbox</string>
    <!--information strings-->
    <string name="rename_text">Please type a new name for \"%1$s\"</string>
    <string name="new_category_text">Please type a name for this Category</string>
    <string name="new_value">New %1$s</string>
    <string name="add_field_text">Please Select a new Type of Field</string>
    <string name="new_template_instruction">Please enter a Name and Date Format</string>
    <!--warning strings-->
    <string name="confirm_delete">Are you sure you want to delete %1$s named \"%2$s\"</string>
    <string name="confirm_category_warning">You will not loose any data or any saved Templates. This action cannot be undone.</string>
    <string name="confirm_template_warning">You will not loose any data. This action cannot be undone.</string>
    <!--labels-->
    <string name="name">Name</string>
    <string name="time_format">Time Type</string>
    <string name="date">Date</string>
    <string name="duration">Duration</string>
    <string name="date_time">Date/Time</string>
    <string name="filter_templates">Filter Templates</string>
    <string name="uncategoriezed">(Uncategorized)</string>
    <string name="simple">Yes/No Question</string>
    <string name="multiple">Select Multiple</string>
    <string name="single">Select Single</string>
    <string name="description">Description</string>
    <string name="rating">Slider</string>
    <string name="value">Value</string>
    <string name="image">Image Map</string>
    <string name="question">Question</string>
...
    <string name="unit">Unit</string>
    <string name="option">Option</string>
    <!--alt text-->
    <string name="add_category">Add Category</string>
    <string name="add_entry">Add Entry</string>
    <string name="add_template">Add Template</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <!--error strings-->
    <string name="no_data">No %1$s, Please add at least one.</string>
    <string name="no_templates_filtered">Template filter returned no results</string>
    <string name="template_file_not_found">You cannot delete a Template before you\'ve saved it.</string>
    <string name="number_errors">%1$s errors found.</string>
    <string name="template_not_selected">ERROR: No Template Selected</string>
    <string name="min_max_not_valid">ERROR: Minimum and Maximum are not a valid Range</string>
    <string name="not_enough">ERROR: You must have at least 2 %1$s Options</string>
    <string name="special_symbols">ERROR: %1$s must not have special characters</string>
    <string name="not_found">ERROR: %1$s not set</string>
    <string name="length">ERROR: %1$s must not have more than %2$s characters</string>
    <string name="other_errors">ERROR: Min and/or Max values are not valid. Fix these first</string>
    <string name="in_use">ERROR: %1$s already in use</string>
    <string name="too_big">ERROR: %1$s is too big</string>
    <string name="too_small">ERROR: %1$s is too small</string>
    <!--compound strings -->
    <string name="radio">Radio Button</string>
...
