...
        <menu>
            <item
                android:id="@+id/nav_templates"
                android:icon="@drawable/ic_template"
                android:title="@string/drawer_templates"/>
            <item
                android:id="@+id/nav_categories"
                android:icon="@drawable/ic_category"
                android:title="@string/drawer_categories"/>
            <!--TODO add flares and backup navigation items-->
        </menu>
    </item>

...
