<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent">


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintBottom_toTopOf="@id/save"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/multiple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/medium"
            android:text="@string/multiple"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/title_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/question_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/multiple">

            <TextView
                android:id="@+id/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:labelFor="@id/editText"
                android:paddingStart="@dimen/xlarge"
                android:paddingTop="@dimen/medium"
                android:paddingEnd="0dp"
                android:paddingBottom="@dimen/medium"
                android:text="@string/question"
                app:layout_constraintBottom_toTopOf="@id/error"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large"
                android:layout_marginEnd="@dimen/large"
                android:autofillHints="false"
                android:inputType="textCapWords"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/question"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/small"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/error_text"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editText" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/check_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/question_layout">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/check_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/error_text"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/check_recycler"
            app:layout_constraintBottom_toTopOf="@id/addCheck"/>

        <Button
            android:id="@+id/addCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_check"
            app:layout_constraintTop_toBottomOf="@+id/check_error" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/save"
    android:layout_width="match_parent"
    android:background="@color/colorAccent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="@dimen/large"
        android:paddingBottom="@dimen/large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/save"
            app:srcCompat="@drawable/ic_save"
            app:tint="@color/textAlt" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/small"
            android:text="@string/save"
            android:textColor="@color/textAlt" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>